--- a/amazon_sentiment.ipynb
+++ b/amazon_sentiment.ipynb
@@ -15,15 +15,15 @@
       "metadata": {},
       "source": [
         "# Table of Contents\n",
-        "1. [Importing Libraries and Preparing the Environment](amazon_sentiment.ipynb#1-importing-libraries-and-preparing-the-environment)\n",
-        "2. [Downloading and Decompressing the Dataset](amazon_sentiment.ipynb#2-downloading-and-decompressing-the-dataset)\n",
-        "3. [Previewing the Data](amazon_sentiment.ipynb#3-previewing-the-data)\n",
-        "4. [Data Preprocessing](amazon_sentiment.ipynb#4-data-preprocessing)\n",
-        "5. [Exploring Dataset Labels](amazon_sentiment.ipynb#5-exploring-dataset-labels)\n",
-        "6. [Configuring the BERT Model](amazon_sentiment.ipynb#6-configuring-the-bert-model)\n",
-        "7. [Fine-Tuning BERT for Sentiment Analysis](amazon_sentiment.ipynb#7-fine-tuning-bert-for-sentiment-analysis)\n",
-        "8. [Evaluation on Test Data](amazon_sentiment.ipynb#8-evaluation-on-test-data)\n",
-        "9. [Future Direction](amazon_sentiment.ipynb#9-future-direction)\n",
+        "1. [Importing Libraries and Preparing the Environment](#1-importing-libraries-and-preparing-the-environment)\n",
+        "2. [Downloading and Decompressing the Dataset](#2-downloading-and-decompressing-the-dataset)\n",
+        "3. [Previewing the Data](#3-previewing-the-data)\n",
+        "4. [Data Preprocessing](#4-data-preprocessing)\n",
+        "5. [Exploring Dataset Labels](#5-exploring-dataset-labels)\n",
+        "6. [Configuring the BERT Model](#6-configuring-the-bert-model)\n",
+        "7. [Fine-Tuning BERT for Sentiment Analysis](#7-fine-tuning-bert-for-sentiment-analysis)\n",
+        "8. [Evaluation on Test Data](#8-evaluation-on-test-data)\n",
+        "9. [Future Direction](#9-future-direction)\n",
         "    "
       ]
     },
